--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "build": "rm ./dist && npx parcel build src/index.html",
         "test:unit": "npx jest",
         "test:unit-watch": "npx jest --watch",
-        "test": "npm run lint && npm run test:unit ",
-        "lint": "npx tslint --project tsconfig.json --format stylish"
+        "test": "npm run test:unit ",
+        "lint": "npx tslint --project tsconfig.json --format stylish --fix"
     },
     "repository": {
         "type": "git",
@@ -53,6 +53,7 @@
         "jest": "24.7.1",
         "jest-css-modules": "1.1.0",
         "offline-plugin": "5.0.6",
+        "prettier": "^1.18.2",
         "ts-jest": "^24.0.2",
         "ts-node": "^8.2.0",
         "tslint": "5.15.0",
