--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "connected-react-router": "6.2.2",
         "history": "4.9.0",
+        "lodash.throttle": "^4.1.1",
         "parcel-bundler": "^1.12.3",
         "react": "^16.8.6",
         "react-dom": "16.8.6",
@@ -40,6 +41,7 @@
         "@types/enzyme": "3.9.1",
         "@types/enzyme-adapter-react-16": "1.0.5",
         "@types/history": "4.7.2",
+        "@types/lodash.throttle": "^4.1.6",
         "@types/node": "10.12.18",
         "@types/react": "16.8.13",
         "@types/react-dom": "16.8.4",
