--- a/package.json
+++ b/package.json
@@ -59,12 +59,11 @@
         "offline-plugin": "5.0.6",
         "prettier": "^1.18.2",
         "ts-jest": "^24.0.2",
-        "ts-node": "^8.2.0",
         "tslint": "5.15.0",
         "tslint-config-prettier": "1.18.0",
         "tslint-consistent-codestyle": "1.15.1",
         "tslint-plugin-prettier": "2.0.1",
-        "typescript": "3.4.5"
+        "typescript": "^3.5.2"
     },
     "jest": {
         "transform": {
