script fixes, card edit fix

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "test:unit": "npx jest",
         "test:unit-watch": "npx jest --watch",
         "test:e2e": "echo 'cypress.io here'",
+        "test": "npm run test:unit && npm run test:e2e",
         "lint": "npx tslint --project tsconfig.json --format stylish --fix"
     },
     "repository": {
