--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.ts",
     "scripts": {
         "start": "npx parcel src/index.html -p 4444",
-        "build": "rm ./dist && npx parcel build src/index.html",
+        "build": "rm -r ./dist/ && npx parcel build src/index.html",
         "test:unit": "npx jest",
         "test:unit-watch": "npx jest --watch",
         "test:e2e": "npx cypress run",
@@ -96,7 +96,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged",
-            "pre-push": "npm run lint && npm test"
+            "pre-push": "npm run lint && npm run test:unit"
         }
     },
     "lint-staged": {
