--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@types/enzyme": "3.9.1",
         "@types/enzyme-adapter-react-16": "1.0.5",
         "@types/history": "4.7.2",
+        "@types/jest": "^24.0.15",
         "@types/lodash.throttle": "^4.1.6",
         "@types/node": "10.12.18",
         "@types/react": "16.8.13",
